# ChangeLog for games-emulation/hatari
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/hatari/ChangeLog,v 1.21 2008/07/24 17:30:56 armin76 Exp $

  24 Jul 2008; Raúl Porcel <armin76@gentoo.org> hatari-1.0.1.ebuild:
  x86 stable wrt #231877

  18 Jul 2008; Santiago M. Mola <coldwind@gentoo.org> hatari-1.0.1.ebuild:
  amd64 stable wrt bug #231877

  16 Jul 2008; nixnut <nixnut@gentoo.org> hatari-1.0.1.ebuild:
  Stable on ppc wrt bug 231877

*hatari-1.0.1 (22 Jun 2008)

  22 Jun 2008; Michael Sterrett <mr_bones_@gentoo.org> +hatari-1.0.1.ebuild:
  version bump

*hatari-1.0.0 (21 Mar 2008)

  21 Mar 2008; Michael Sterrett <mr_bones_@gentoo.org> +hatari-1.0.0.ebuild:
  version bump

*hatari-0.95 (07 Aug 2007)

  07 Aug 2007; Michael Sterrett <mr_bones_@gentoo.org> +hatari-0.95.ebuild:
  version bump

  12 Mar 2007; Marius Mauch <genone@gentoo.org> hatari-0.45.ebuild,
  hatari-0.80.ebuild, hatari-0.90.ebuild:
  Replacing einfo with elog

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  06 Feb 2007; Michael Sterrett <mr_bones_@gentoo.org> hatari-0.90.ebuild:
  work around more parallel make issues (bug #164068)

*hatari-0.90 (01 Oct 2006)

  01 Oct 2006; Michael Sterrett <mr_bones_@gentoo.org> +hatari-0.90.ebuild:
  version bump (bug #149757)

  24 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org> hatari-0.45.ebuild:
  Removed sed-4 from DEPEND.

*hatari-0.80 (14 Oct 2005)

  14 Oct 2005; Michael Sterrett <mr_bones_@gentoo.org> +hatari-0.80.ebuild:
  version bump

  08 Jul 2005; Heinrich Wendel <lanius@gentoo.org> hatari-0.70.ebuild:
  add ~amd64

*hatari-0.70 (06 Jun 2005)

  06 Jun 2005; David Holm <dholm@gentoo.org> +hatari-0.70.ebuild:
  Version bumped

  26 May 2004; Michael Sterrett <mr_bones_@gentoo.org> hatari-0.40.ebuild,
  hatari-0.45.ebuild:
  Clean older version

*hatari-0.45 (07 Nov 2003)
