@@ -1,4 +1,6 @@
 DIST hatari-1.0.1.tar.gz 879983 RMD160 04ef3fb627bcdbacdb1f05a7e04ec66933170eda SHA1 a5b55d42d169f166277fb6db267628472bb7fd21 SHA256 9eb3902fc6e8b18f93889ba122ac5a05cd1f769885f73a688e3c7ba5be85731d
+DIST hatari-1.1.0.tar.bz2 840629 RMD160 a1d96891bbfba8e55b37e57feee9f2a91773e4f3 SHA1 7d1d8ee22cdd56cb9bb67b78fdbfb06980861aae SHA256 02d4518b40fe7ff4d01b036b48355cfb34d6b9945c02854e150c7a8d579239ca
 EBUILD hatari-1.0.1.ebuild 1509 RMD160 1287c1baa6701f68fed3fbae9a8ee854f0e8030d SHA1 8ba53381c6970245df2e0d856cfa50f49f361994 SHA256 a0f732190454eba0294d9db6dc24bf33ab1fe3b32fd327c130a70f9a8a9f3c7a
-MISC ChangeLog 2909 RMD160 2a8695f213a96c506c3c95981da2bebc1d936eb8 SHA1 de5d4d39355559f037308df8a5ae8bc07be0735f SHA256 0823ad46b412cf0120cd14be67541028b1570759a0296f4df8b37c6cdbc556da
+EBUILD hatari-1.1.0.ebuild 1567 RMD160 9a50d939bd59b7996e5bc6f228b2676a6bc40995 SHA1 9c6f235db4dea969d1b950a4fef288f7a4db6bf9 SHA256 524426930103ca5921a445d88e34e70e988988b63ed47658369d03056754b47e
+MISC ChangeLog 3047 RMD160 192fc7b16d458e487c83b95bda73aec5f252face SHA1 68a809187312be37ae2d0241e641795f69dd4df8 SHA256 e8fdd2c5f8f8b91da666df4187fa3cbd6c4b7c0ca071276963c0f4ea7a6fe4ff
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
