@@ -1,6 +1,11 @@
 # ChangeLog for games-emulation/hatari
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/hatari/ChangeLog,v 1.21 2008/07/24 17:30:56 armin76 Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/hatari/ChangeLog,v 1.22 2009/01/13 01:28:54 mr_bones_ Exp $
+
+*hatari-1.1.0 (13 Jan 2009)
+
+  13 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org> +hatari-1.1.0.ebuild:
+  version bump (bug #254111)
 
   24 Jul 2008; Raúl Porcel <armin76@gentoo.org> hatari-1.0.1.ebuild:
   x86 stable wrt #231877
